fix(ui5-tab): properly align level 0 items

--- a/packages/main/src/themes/TabInOverflow.css
+++ b/packages/main/src/themes/TabInOverflow.css
@@ -40,12 +40,12 @@
 }
 
 .ui5-tab-overflow-itemContent-wrapper {
-	padding-inline-start: calc(var(--_ui5-tab-indentation-level) * var(--_ui5-tab-indent-multiplier) + var(--_ui5-tab-extra-indent, 0) * var(--_ui5_tc_overflowItem_extraIndent));
+	padding-inline-start: calc((calc(var(--_ui5-tab-indentation-level) + var(--_ui5-tab-level-has-icon) * var(--_ui5_tc_overflowItem_additional, 0))) * (var(--_ui5_tc_overflowItem_indent) + var(--_ui5_tc_overflowItem_extra_indent)));
 }
 
 .ui5-tab-overflow-item  .ui5-tab-semantic-icon {
 	position: absolute;
-	inset-inline-start: -1.5rem;
+	inset-inline-start: -1.25rem;
 } 
 
 .ui5-tab-overflow-item--selectedSubTab {
